Intermittent /requestidlecallback/deadline-max.html | single tracking bug
Categories
(Core :: DOM: Core & HTML, defect, P3)
Tracking
()
People
(Reporter: jmaher, Assigned: smaug)
References
Details
(Keywords: intermittent-failure, intermittent-testcase, Whiteboard: [stockwell unknown])
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Reporter | ||
Comment 1•2 years ago
|
||
Additional information about this bug failures and frequency patterns can be found by running: ./mach test-info failure-report --bug 1785549
Comment hidden (Intermittent Failures Robot) |
Comment 4•2 years ago
|
||
There have been 42 total failures in the last 7 days, recent failure log.
Affected platforms are:
- linux1804-64-asan-qr
- linux1804-64-qr
- linux1804-64-shippable-qr
- macosx1015-64-qr
- macosx1015-64-shippable-qr
- windows10-64-2004-qr
Comment hidden (Intermittent Failures Robot) |
Comment 6•2 years ago
|
||
On Linux and Windows, we're failing like this:
TEST-UNEXPECTED-FAIL | /requestidlecallback/deadline-max.html | Check that the deadline is less than 50ms. - assert_less_than_equal: expected a number less than or equal to 50 but got 50.1261209999999
The highest value I saw was around 50.72. (There are only two failures on Windows.)
The OSX failures look like this:
TEST-UNEXPECTED-PASS | /requestidlecallback/deadline-max.html | Check that the deadline is less than 50ms. - expected FAIL
I don't know if this is always passing or merely only sometimes passing.
Olli, are you familiar with request idle callback? Do you know if the expectations should be changed here? Thanks.
Assignee | ||
Comment 7•2 years ago
|
||
I guess we need to round that 50.1261209999999 to 50
Assignee | ||
Comment 8•2 years ago
|
||
Comment 10•2 years ago
|
||
bugherder |
![]() |
||
Comment 11•2 years ago
|
||
Could you submit an uplift request? There have been 8 such failures on beta in the last 2 days.
Assignee | ||
Comment 12•2 years ago
|
||
Comment on attachment 9292071 [details]
Bug 1785549, ensure requestIdleCallback's callback doesn't get deadlines > 50ms, r=mccr8
Beta/Release Uplift Approval Request
- User impact if declined: Rarely > 50ms idle periods. But the reason for the request is to reduce the number of intermittent test failures
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It just rounds a number reporter through idle callback.
- String changes made/needed: NA
- Is Android affected?: Yes
Comment 13•2 years ago
|
||
Comment on attachment 9292071 [details]
Bug 1785549, ensure requestIdleCallback's callback doesn't get deadlines > 50ms, r=mccr8
Approved for 105.0b6.
Comment 14•2 years ago
|
||
bugherder uplift |
Comment hidden (Intermittent Failures Robot) |
Description
•