Bug 1785549, ensure requestIdleCallback's callback doesn't get deadlines > 50ms, r=mccr8 a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D155867